--- a/templates/app_folder/request_done.html
+++ b/templates/app_folder/request_done.html
@@ -13,7 +13,7 @@
             貴重なご意見ありがとうございます。<br>
             今後の運営の参考にさせていただきます。
         </p>
-        <a href="{% url 'campus_guide:university_list' %}" class="inline-block bg-gray-800 text-white font-bold py-3 px-8 rounded-full hover:bg-gray-700 transition"></a>
+        <a href="{% url 'campus_guide:category_list' %}" class="inline-block bg-gray-800 text-white font-bold py-3 px-8 rounded-full hover:bg-gray-700 transition"></a>
             トップページに戻る
         </a>
     </div>
