--- a/templates/app_folder/search_results.html
+++ b/templates/app_folder/search_results.html
@@ -54,7 +54,7 @@
     </div>
 
     <div class="text-center mt-12">
-        <a href="{% url 'campus_guide:university_list' %}" class="text-indigo-600 hover:underline">
+        <a href="{% url 'campus_guide:category_list' %}" class="text-indigo-600 hover:underline">
             &larr; トップに戻る
         </a>
     </div>
