--- a/templates/app_folder/organization_detail.html
+++ b/templates/app_folder/organization_detail.html
@@ -85,7 +85,7 @@
 
         {#戻るボタン#}
         <div class="text-center mt-16">
-            <a href="{% url 'campus_guide:university_list' %}" class="inline-flex items-center text-gray-500 hover:text-indigo-600 font-medium transition bg-white px-6 py-3 rounded-full shadow-sm hover:shadow">
+            <a href="{% url 'campus_guide:category_list' %}" class="inline-flex items-center text-gray-500 hover:text-indigo-600 font-medium transition bg-white px-6 py-3 rounded-full shadow-sm hover:shadow">
                 &larr; トップに戻る
             </a>
         </div>
