--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <link rel="canonical" href="https://canvas-compass.net{{ request.path }}">C
+    <link rel="canonical" href="https://canvas-compass.net{{ request.path }}">
     <meta charset="UTF-8">
     <title>{% block title %}Canvas Compass{% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
