--- a/templates/app_folder/university_list.html
+++ b/templates/app_folder/university_list.html
@@ -34,12 +34,16 @@
 
         {#検索バー#}
         <div class="max-w-2xl mx-auto mb-20 relative -mt-24 z-20">
+
+            {#getメソッドによって↓nameで決めた値をcampus_guide/searchの後にくっつける#}
             <form action="{% url 'campus_guide:search' %}" method="get" class="relative shadow-2xl rounded-full">
                 <div class="relative">
                     <div class="absolute inset-y-0 left-0 pl-6 flex items-center pointer-events-none">
                         <svg class="h-6 w-6 text-gray-400" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" /></svg>
                     </div>
-                    <input type="text" name="keyword" 
+                    {#↓nameで決めた値をcampus_guide/searchの後にくっつける#}
+                    <input type="text" name="keyword"  
+
                            class="w-full py-5 pl-16 pr-32 text-lg border-0 rounded-full focus:ring-4 focus:ring-indigo-300 transition" 
                            placeholder="キーワード検索（例：サークル、時間割）">
                     <button type="submit" class="absolute right-2 top-2 bottom-2 bg-indigo-600 hover:bg-indigo-700 text-white px-8 rounded-full font-bold transition duration-200">
